--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/uuid": "^10.0.0",
     "@vercel/kv": "^3.0.0",
     "clanker-sdk": "^4.2.10",
+    "dotenv": "^17.2.3",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
